--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,125 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: 'Poppins', sans-serif;
 }
-.hero{
-    width: 100%;
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
-    position: relative;
-}
-:root {
-  --main-color: #06662b;
-  --bg-color: rgb(244, 238, 224);
-  --text-color: black;
-}
-body.active {
-    --text-color: rgb(246, 248, 232);
-    --bg-color: #1c1c1c;
-}
-body {
-    background: var(--bg-color);
-    color: var(--text-color);
-}
-*::selection {
-    color: var(--bg-color);
-    background: var(--main-color);
-}
-nav{
-    width: 84%;
-    margin: auto;
-    padding: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.logo{
-    width: 150px;
-    cursor: pointer;
-}
-nav ul li{
-    display: inline-block;
-    list-style: none;
-    margin: 10px 30px;
-}
-nav ul li a{
-    text-decoration: none;
-    color: black;
-    color: var(--text-color);
-}
-nav ul li a:hover{
-    color: #06662b;
-}
-nav ul li a::after{
-    content: '';
-    width: 0;
-    height: 2.5px;
-    background-color: #06662b;
-    margin: auto;
-    display: block;
-}
-nav ul li a:hover::after{
-    width: 100%;
-    transition: width 0.3s linear;
-}
-.btn{
-    background: #06662b;
-    border-radius: 5px;
-    padding: 10px 18px;
-    text-decoration: none;
-    color: #fff;
-    display: inline-block;
-    border: 1px solid transparent;
-    transition: all 0.4s ease;
-}
-.btn:hover{
-    background: transparent;
-    color: #06662b;
-    border: 1px solid #06662b;
+html{
+	scroll-behavior: smooth;
 }
 #darkmode {
     padding: 25px;
     font-size: 22px;
     cursor: pointer;
+	color: black;
+}
+:root {
+    --text-color: rgb(0, 0, 0);
+	--bg-image: url(../img/back1.jpg);
+	--bg-color: white;
+}
+body.active {
+    --text-color: rgb(255, 255, 255);
+    background-color: #2f2e2e;
+}
+body {
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+#header{
+	min-height: 100vh;
+	width: 100%;
+	background-image: url(../img/back.jpg);
+	background-position: center;
+	background-size: cover;
+	position: relative;
+}
+nav{
+	display: flex;
+	padding: 2% 9%;
+	justify-content: space-between;
+	align-items: center;
+}
+nav img{
+	width: 150px;
+}
+.nav-links{
+	list-style: none;
+  	float: right;
+  	line-height: 90px;
+  	margin: 0;
+  	padding: 0;
+}
+.nav-links ul li{
+	list-style: none;
+	display: inline-block;
+	padding: 8px 12px;
+	position: relative;
+}
+.nav-links ul li a{
+	color: rgb(114, 114, 114);
+	text-decoration: none;
+	font-size: 13px;
+	transition: all 0.3s ease 0s;
+}
+.nav-links ul li a:hover{
+	background-color: #000000;
+	padding: 9px 20px;
+	border-radius: 30px;
+	border-bottom: none;
+	color: white;
+}
+li a.contact {
+	background-color: #000000;
+	padding: 9px 20px;
+	border-radius: 30px;
+	transition: all 0.3s ease 0s;
+	border-bottom: none;
+}
+li a.contact:hover {
+	background-color: #000000;
+	color: white;
+	border-bottom: none;
+}
+nav .fa{
+	display: none;
+}
+@media(max-width: 900px){
+	.nav-links ul li{
+		display: block;
+	}
+	.nav-links{
+		position: fixed;
+		background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(175, 180, 184) 90%);
+		height: 100vh;
+		width: 200px;
+		top: 0;
+		right: -200px;
+		text-align: left;
+		z-index: 2;
+		transition: 1s;
+	}
+	nav .fa{
+		display: block;
+		color: black;
+		margin: 10px;
+		font-size: 22px;
+		cursor: pointer;
+	}
+	.nav-links ul{
+		padding: 30px;
+	}
+	nav img{
+		width: 100px;
+	}
 }
 .info{
-    margin-left: 8%;
-    margin-top: 10%;
+    text-align: center;
 }
 .info h1{
-    font-size: 40px;
+    font-size: 30px;
     color: black;
-    color: var(--text-color);
 }
 .info h1 span{
    animation: colorchangeproject 3s infinite;
@@ -102,42 +129,702 @@ nav ul li a:hover::after{
     line-height: 22px;
     margin-top: 10px;
     margin-bottom: 30px;
-    color: var(--text-color);
 }
-.img-box{
-    width: 45%;
-    height: 80%;
-    position: absolute;
-    bottom: 0;
-    right: 100px;
+@media(max-width: 510px){
+	.info h1{
+		font-size: 25px;
+	}
+	.info p{
+		font-size: 15px;
+	}
 }
-.img-box img{
-    height: 100%;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-    transition: bottom 1s, left 1s;
+.icon-bar {
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	z-index: 10;
 }
-.img-box:hover .man-img{
-    left: 54%;
+.icon-bar a {
+	text-decoration: none;
+	width: 210px;
+	background: #2b2b2b;
+	color: #fff;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	padding: 5px;
+	font-size: 15px;
+	transform: translateX(-170px);
+	-webkit-transform: translateX(-170px);
+	-ms-transform: translateX(-170px);
+	transition: all 0.5s linear;
+	-webkit-transition: all 0.5s linear;
+	-ms-transition: all 0.5s linear;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
-.social{
-    margin-left: 8%;
-    margin-top: 20px;
+@media(max-width: 800px){
+	.icon-bar{
+		margin-top: 40px;
+	}
 }
-.social a{
-    font-size: 28px;
-    color: black;
-    margin-right: 20px;
-    color: var(--text-color);
+@media(max-width: 700px){
+	.icon-bar{
+		display: none;
+	}
 }
-.social a:hover{
-    color: #06662b;
+.facebook {
+	background: #2b2b2b;
+}
+.twitter {
+	background: #2b2b2b;
+}
+.instagram {
+	background: #2b2b2b;
+}
+
+.icon-bar a i {
+	padding-left: 20px;
+	padding-right: 7px;
+	font-size: 30px !important;
+	animation: letszoom 3s linear alternate-reverse infinite;
+}
+
+@keyframes letszoom {
+	from {
+		transform: scale(0.8);
+	}
+
+	to {
+		transform: scale(1);
+	}
+
+}
+
+.icon-bar a:hover {
+	transform: translateX(0);
+	-webkit-transform: translateX(0);
+	-ms-transform: translateX(0);
 }
 @keyframes colorchangeproject{
 	0%{color: #c5c5c5;}
-	25%{color:#06662b;}
+	25%{color:#000000;}
 	50%{color: #c5c5c5;}
-	100%{color:#06662b; }
+	100%{color:#000000; }
+}
+.slide{
+	width: 100%;
+}
+.mySlides{
+	display: none;
+}
+.slide h2{
+	text-align: center;
+	padding-top: 30px;
+}
+.slide p{
+	text-align: center;
+	padding: 30px;
+}
+.slideshow-container {	
+	text-align: center;
+	max-width: 100vw;
+	position: relative;
+	margin: auto;
+}
+.slideshow-container img{
+	vertical-align: middle;
+	border-radius: 20px;
+	max-width:100%;
+    height: 550px;
+}
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+.text {
+	color: #f2f2f2;
+	font-size: 15px;
+	position: absolute;
+	bottom: 8px;
+	width: 100%;
+	text-align: center;
+}
+.dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+	background-color: #717171;
+}
+.fade {
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+  
+@keyframes fade {
+	from {opacity: .4} 
+	to {opacity: 1}
+}
+.campus{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	padding-top: 100px;
+}
+.campus-col{
+	flex-basis: 32%;
+	border-radius: 10px;
+	margin-bottom: 30px;
+	position: relative;
+	overflow: hidden;
+}
+.campus-col img{
+	width: 100%;
+	display: block;
+}
+.layer{
+	background: transparent;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: 0.5s;
+}
+.layer:hover{
+	background: rgba(104, 104, 104, 0.7);
+}
+.layer h3{
+	width: 100%;
+	font-weight: 500;
+	color: #fff;
+	font-size: 26px;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	position: absolute;
+	opacity: 0;
+	transform: 0.5s;
+}
+.layer:hover h3{
+	bottom: 49%;
+	opacity: 1;
+}
+@media(max-width: 700px){
+	.campus-col img{
+		height: auto;
+		flex-direction: column;
+	}
+}
+/* about page */
+
+section > header{
+	font-size: 40px;
+	text-align: center;
+	padding: 24px;
+	font-family: 'Poppins', sans-serif;
+	font-weight: bold;
+}
+section .skill{
+	display: grid;
+	grid-gap: 16px;
+	padding: 16px;
+	max-width: 1024px;
+	margin-inline: auto;
+}
+@media(min-width: 600px){
+	.skill{
+	grid-template-columns: repeat(3,1fr);
+	}
+}
+@media(max-width: 600px){
+	.skill{
+	grid-template-columns: 1fr;
+	}
+}
+.skill .set{
+	background-color: white;
+	padding: 24px;
+	border-radius: 16px;
+}
+.skill .set:hover{
+	box-shadow: 0px 12px 16px rgb(180, 180, 180);
+}
+.set span{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 80px;
+	height: 80px;
+	font-size: 48px;
+	background-color: #000000;
+	color: white;
+	border-radius: 35%;
+	margin-inline: auto;
+}
+.set > header{
+	padding-block: 24px;
+	font-size: 24px;
+	color: #000000;
+	text-align: center;
+}
+.set .list{
+	padding-block: 8px;
+	display: grid;
+	grid-template-columns: 1fr 20px;
+	color: grey;
+	text-transform: uppercase;
+}
+.set:hover .list{
+	color: black;
+}
+#sub-header{
+	height: 50vh;
+	width: 100%;
+	background-image: url(../img/about.jpg);
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	margin-bottom: 30px;
+}
+#sub-header h1{
+	margin-top: 100px;
+	color: black;
+}
+.about-us{
+	width: 80%;
+	margin: auto;
+	padding-top: 80px;
+	padding-bottom: 50px;
+}
+.about-col{
+	flex-basis: 48%;
+	padding: 30px 2px;
+}
+.about-col img{
+	width: 100%;
+	height: 650px;
+	border-radius: 10px;
+}
+.about-col img:hover{
+	opacity: .5;
+	transition: .5s ease-in-out;
+}
+.about-col h1{
+	padding-top: 0;
+}
+.about-col h2{
+	font-size: 30px;
+}
+.about-col p{
+	padding: 15px 0 25px;
+}
+.row{
+	margin-top: 5%;
+	display: flex;
+	justify-content: space-between;
+}
+h1{
+    text-align: center;
+	font-size: 40px;
+}
+.hero-btn{
+	display: inline-block;
+	text-decoration: none;
+	color: black ;
+	border: 1px solid black;
+	padding: 12px 34px;
+	font-size: 13px;
+	background: transparent;
+	position: relative;
+	cursor: pointer;
+}
+.hero-btn:hover{
+	border: 1px solid black;
+	background: #C03535;
+	transition: 1s;
+}
+
+/* footer */
+
+.footer{
+	height: 56vh;
+	background-image: url(../img/footer.png);
+	background-size: cover;
+	width: 100%;
+	text-align: center;
+}
+.footer p{
+	color: #C8C8C8;
+	font-size: 15px;
+}
+.icons .fa{
+	font-size: 25px;
+	color: #ffffff;
+	margin: 0 15px;
+	margin-top: 250px;
+	cursor: pointer;
+	padding: 18px 0;
+}
+.fa-heart-o{
+	color: #e44a4a;
+}
+.icons .fa-facebook:hover{
+    color: #001d85;
+}
+.icons .fa-twitter:hover{
+    color: #1ad6dc;
+}
+.icons .fa-instagram:hover{
+    color: #de05d0;
+}
+@media(max-width: 1300px){
+	.footer{
+		height: 60vh;
+	}
+	.footer .icons .fa{
+		margin-top: 220px;
+	}
+}
+@media(max-width: 1200px){
+	.footer{
+		height: 60vh;
+	}
+	.footer .icons .fa{
+		margin-top: 200px;
+	}
+}
+@media(max-width: 1000px){
+	.footer{
+		height: 50vh;
+	}
+	.footer .icons .fa{
+		margin-top: 150px;
+	}
+}
+@media(max-width: 890px){
+	.footer{
+		height: 50vh;
+	}
+	.footer .icons .fa{
+		margin-top: 150px;
+	}
+}
+
+
+/* hobby page */
+
+#sub1-header{
+	height: 50vh;
+	width: 100%;
+	background-image: url(../img/hobby.jpg);
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	margin-bottom: 30px;
+}
+#sub1-header h1{
+	margin-top: 100px;
+	color: black;
+}
+.hobby{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	padding-top: 100px;
+}
+.hobbies-col{
+	flex-basis: 31%;
+	border-radius: 10px;
+	margin-bottom: 5%;
+	text-align: left;
+}
+.hobbies-col img{
+	width: 380px;
+	height: 250px;
+	border-radius: 10px;
+}
+.hobbies-col p{
+	padding: 0;
+}
+.hobbies-col h3{
+	margin-top: 16px;
+	margin-bottom: 15px;
+	text-align: left;
+}
+@media(max-width: 900px){
+	.hobbies-col img{
+		margin-left: 0px;
+		width: 100%;
+		height: 150px;
+	}
+}
+@media(max-width: 1500px){
+	.hobbies-col img{
+		margin-left: 0px;
+		width: 100%;
+		height: 150px;
+		align-items: center;
+	}
+}
+/* contact page */
+
+#sub2-header{
+	height: 50vh;
+	width: 100%;
+	background-image: url(../img/contact.jpg);
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.location{
+	width: 80%;
+	margin: auto;
+	padding: 80px 0;
+}
+.location iframe{
+	width: 100%;
+}
+.contact-us{
+	width: 80%;
+	margin: auto;
+}
+.contact-col{
+	flex-basis: 48%;
+	margin-bottom: 30px;
+}
+.contact-col div{
+	display: flex;
+	align-items: center;
+	margin-bottom: 40px;
+}
+.contact-col div .fa{
+	font-size: 28px;
+	color: #f44336;
+	margin: 10px;
+	margin-right: 30px;
+}
+.contact-col div p{
+	padding: 5px;
+}
+.contact-col div h5{
+	padding: 5px;
+	font-size: 20px;
+	margin-bottom: 5px;
+	color: #555;
+	font-weight: 400;
+}
+.contact-col input, .contact-col textarea{
+	width: 100%;
+	padding: 15px;
+	margin-bottom: 17px;
+	outline: none;
+	border: 1px solid #ccc;
+	box-sizing: border-box;
+}
+@media(max-width: 500px){
+	.contact-col div p{
+		font-size: 10px;
+	}
+	.contact-col div h5{
+		font-size: 10px;
+	}
+	.contact-col div .fa{
+		font-size: 15px;
+	}
+}
+
+/* school page */
+
+#sub3-header{
+	height: 50vh;
+	width: 100%;
+	background-image: url(../img/school.jpg);
+	background-position: center;
+	background-size: cover;
+	text-align: center;
+	margin-bottom: 30px;
+}
+.cta{
+	margin: 100px auto;
+	width: 80%;
+	background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../img/lvcccon.jpg);
+	background-position: center;
+	background-size: cover;
+	border-radius: 10px;
+	text-align: center;
+	padding: 100px 0;
+}
+.cta h1{
+	color: #fff;
+	margin-bottom: 40px;
+	padding: 0;
+}
+@media(max-width: 700px){
+	.cta h1{
+		font-size: 24px;
+	}
+}
+.hero-btn1{
+	display: inline-block;
+	text-decoration: none;
+	color: white ;
+	border: 1px solid white;
+	padding: 12px 34px;
+	font-size: 13px;
+	background: transparent;
+	position: relative;
+	cursor: pointer;
+}
+.hero-btn1:hover{
+	border: 1px solid white;
+	background: #C03535;
+	transition: 1s;
+}
+#course{
+	width: 80%;
+	margin: auto;
+	text-align: center;
+	padding-top: 100px;
+}
+h1{
+	font-size: 36px;
+	font-weight: 800;
+}
+#course p{
+	color: black;
+	font-size: 14px;
+	font-weight: 300; 
+	line-height: 22px;
+	padding: 10px;
+}
+.row{
+	margin-top: 5%;
+	display: flex;
+	justify-content: space-between;
+}
+.course-col{
+	flex-basis: 31%;
+	background: rgb(200, 197, 197);
+	border-radius: 10px;
+	margin-bottom: 5%;
+	padding: 20px 12px;
+	box-sizing: border-box;
+	transition: 0.5s;
+}
+h3{
+	text-align: center;
+	font-weight: 600;
+	margin: 10px 0;
+}
+.course-col:hover{
+	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+@media(max-width: 700px){
+	.row{
+		flex-direction: column;
+	}
+	.cta h1{
+		font-size: 20px;
+	}
+}
+.container
+{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-wrap: wrap;
+}
+.container .card
+{
+   width: 340px;
+   height: 300px;
+   padding: 40px 20px;
+   margin: 20px;
+   background: #f2f3f7;
+   box-shadow: 1.2em #d6d6d6;
+   border-radius: 10px;
+}
+.container .card .content
+{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+.container .card:hover
+{
+	box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
+}
+.container .card .content .imgBx
+{
+   width: 180px;
+   height: 180px;
+   border-radius: 50%;
+   position: relative;
+   margin-bottom: 20px;
+   overflow: hidden;
+}
+.container .card .content .imgBx img
+{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+.container .card .content .contentBx h4
+{
+   color: #000000;
+   font-size: 1.2rem;
+   font-weight: bold;
+   text-align: center;
+   letter-spacing: 1px;
+}
+.container .card .content .contentBx h5
+{
+   color: #6c758f;
+   font-size: 1.0rem;
+   font-weight: bold;
+   text-align: center;
+}
+.container .card .content .sci
+{
+   margin-top: 20px;
+}
+.container .card .content .sci a
+{
+   text-decoration: none;
+   color: #6c758f;
+   font-size: 30px;
+   margin: 10px;
+   transition: color 0.4s;
+}
+.container .card .content .sci a:hover
+{
+   color: #000000;
+}
+
+.gotopbtn{
+	width: 50px;
+	height: 50px;
+	bottom: 40px;
+	right: 60px;
+
+	text-decoration: none;
+	text-align: center;
+	line-height: 50px;
+	color: white;
+	font-size: 25px;
+	transition: 0.1s;
 }
